# ShipSmart-MCP

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  render.yaml
app/: main.py
app/core/: config.py  logging.py  middleware.py
app/providers/: __init__.py  base.py  dhl_provider.py  fedex_provider.py  mock_provider.py  shipping_provider.py  ups_provider.py  usps_provider.py
app/tools/: __init__.py  address_tools.py  base.py  quote_tools.py  registry.py
tests/: conftest.py  test_mcp_http.py  test_provider.py  test_provider_factory.py  test_registry.py  test_tools.py
