[project]
name = "shipsmart-mcp"
version = "0.1.0"
description = "ShipSmart MCP Server — exposes shipping tools (validate_address, get_quote_preview, …) over an MCP-compatible HTTP protocol."
requires-python = ">=3.13"
dependencies = [
    # ── Web framework ──────────────────────────────────────────────────────
    "fastapi==0.135.3",
    "uvicorn[standard]>=0.34.0",

    # ── Config ─────────────────────────────────────────────────────────────
    "pydantic-settings>=2.7.0",
    "pydantic>=2.10.0",

    # ── HTTP client (for calling carrier APIs) ─────────────────────────────
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
    "ruff>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.9.0",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
